--- a/GeradorLicenca.html
+++ b/GeradorLicenca.html
@@ -6,6 +6,11 @@
     <title>Gerador de Licença - Frete360</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        /* Correção para o aviso do Webkit/Edge */
+        html {
+            -webkit-text-size-adjust: 100%;
+            text-size-adjust: 100%;
+        }
         body { background-color: #0f172a; color: #e2e8f0; }
         .glass { background: rgba(30, 41, 59, 0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.1); }
     </style>
